# python-design-patterns

./: .gitignore  CLAUDE.md  SYLLABUS.md  TEXTBOOK.md
.devcontainer/: devcontainer.json  start-server.sh
01_strategy/: HANDOUT.md  bad_example.py  strategy.py
02_observer/: HANDOUT.md  bad_example.py  observer.py
03_command/: HANDOUT.md  bad_example.py  command.py
04_state/: HANDOUT.md  bad_example.py  state.py
05_template_method/: HANDOUT.md  bad_example.py  template_method.py
06_iterator/: HANDOUT.md  bad_example.py  iterator.py
07_chain_of_responsibility/: HANDOUT.md  bad_example.py  chain_of_responsibility.py
08_mediator/: HANDOUT.md  bad_example.py  mediator.py
09_memento/: HANDOUT.md  bad_example.py  memento.py
10_visitor/: HANDOUT.md  bad_example.py  visitor.py
11_factory_method/: HANDOUT.md  bad_example.py  factory_method.py
12_abstract_factory/: HANDOUT.md  abstract_factory.py  bad_example.py
13_builder/: HANDOUT.md  bad_example.py  builder.py
14_singleton/: HANDOUT.md  bad_example.py  singleton.py
15_prototype/: HANDOUT.md  bad_example.py  prototype.py
16_decorator/: HANDOUT.md  bad_example.py  decorator.py
17_adapter/: HANDOUT.md  adapter.py  bad_example.py
18_facade/: HANDOUT.md  bad_example.py  facade.py
19_composite/: HANDOUT.md  bad_example.py  composite.py
20_proxy/: HANDOUT.md  bad_example.py  proxy.py
21_bridge/: HANDOUT.md  bad_example.py  (+1 more)
webapp/: app.py  exercise.py  pyproject.toml  sandbox.py
webapp/static/: codemirror-bundle.js  console.js  style.css
webapp/templates/: base.html  index.html  pattern.html
(+12 files in other folders)
