[project]
name = "design-patterns-webapp"
version = "1.0.0"
description = "Interactive web app for learning design patterns in Python"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "markdown>=3.7",
    "pygments>=2.18.0",
    "jinja2>=3.1.0",
]

[project.scripts]
serve = "app:main"
